--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,47 @@ body {
   background: white;
 }
 
+.img-wrap {
+  border-radius: 30%;
+  overflow: hidden;
+}
+
 .img-avt {
   width: 150px;
   height: 150px;
-  border-radius: 30%;
+  transform: scale(1.1);
+  transition: all 0.4s ease-in-out;
+}
+
+.img-wrap:hover .img-avt{
+  transform: scale(1.2);
+  opacity: 0.9;
+}
+
+.info-content {
+  margin: 12px;
+}
+
+.info-content > li {
+  transition: all 0.4s ease-in-out;
+}
+
+.info-name:hover li{
+  transform: scale(1.1);
+  opacity: 0.9;
+  color:#5d0cff;
+}
+
+.info-uni:hover li{
+  transform: scale(1.1);
+  opacity: 0.9;
+  color:#5d0cff;
+}
+
+.info-email:hover li{
+  transform: scale(1.1);
+  opacity: 0.9;
+  color:#5d0cff;
 }
 
 .header {
